--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
   <div class="row" style="padding-top: 10px; padding-bottom: 50px;">
     <div class="column">
       <div class="card">
+        <a href="hannibal.html" target="_blank" style="color: #700000;">
         <img src="1.jpg" alt="Hannibal" style="width:100%">
         <div class="container">
-          <a href="hannibal.html" target="_blank" style="color: #700000;"><h2>Hannibal Lecter</h2></a>
+          <h2>Hannibal Lecter</h2>
         </div>
+        </a>
       </div>
     </div>
 
     <div class="column">
       <div class="card">
+        <a href="hans.html" target="_blank" style="color: #700000;">
         <img src="2.jpeg" alt="Hans" style="width:100%">
         <div class="container">
-          <a href="hans.html" target="_blank" style="color: #700000;"><h2>Hans Gruber</h2></a>
+          <h2>Hans Gruber</h2>
         </div>
+      </a>
       </div>
     </div>
   
