--- a/index.html
+++ b/index.html
@@ -46,35 +46,41 @@
         <img src="2.jpeg" alt="Hans" style="width:100%">
         <div class="container">
           <h2>Hans Gruber</h2>
-        </div>
-      </a>
+          </div>
+        </a>
       </div>
     </div>
   
     <div class="column">
       <div class="card">
+        <a href="loki.html" target="_blank" style="color: #700000;">
         <img src="3.jpg" alt="Loki" style="width:100%">
         <div class="container">
-          <a href="loki.html" target="_blank" style="color: #700000;"><h2>Loki</h2></a>
+          <h2>Loki</h2>
         </div>
+        </a>
       </div>
     </div>
   
     <div class="column">
       <div class="card">
+        <a href="joker.html" target="_blank" style="color: #700000;">
         <img src="4.jpg" alt="Joker" style="width:100%">
         <div class="container">
-          <a href="joker.html" target="_blank" style="color: #700000;"><h2>The Joker</h2></a>
+          <h2>The Joker</h2>
         </div>
+        </a>
       </div>
     </div>
   
     <div class="column">
       <div class="card">
+        <a href="darth.html" target="_blank" style="color: #700000;">
         <img src="5.jpeg" alt="Darth" style="width:100%">
         <div class="container">
-          <a href="darth.html" target="_blank" style="color: #700000;"><h2>Darth Vader</h2></a>
+          <h2>Darth Vader</h2>
         </div>
+        </a>
       </div>
     </div>
   </div>
